pipelinefiles/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cfe
  name: cfe
  namespace: cfe
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 3000
  selector:
    deploymentconfig: cfe
  type: ClusterIP
